first alpha version